[gd_scene format=3 uid="uid://p7pvn42vqnq1"]

[ext_resource type="Script" uid="uid://cgfmcm780c51q" path="res://Scripts/extra_life.gd" id="1_lmb83"]
[ext_resource type="Texture2D" uid="uid://dkf6of5nyuj43" path="res://Assets/Penguino/Life.png" id="1_p58kl"]
[ext_resource type="Texture2D" uid="uid://ckmytydbk7st7" path="res://Assets/Others/Effects/Bright_Sparkle (16 x 16).png" id="2_3cgt6"]
[ext_resource type="AudioStream" uid="uid://bbiqqey7gtwr7" path="res://Sounds/life.wav" id="4_tfbnh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lmb83"]
radius = 11.18034

[sub_resource type="AtlasTexture" id="AtlasTexture_tfbnh"]
atlas = ExtResource("2_3cgt6")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_304lu"]
atlas = ExtResource("2_3cgt6")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iobpg"]
atlas = ExtResource("2_3cgt6")
region = Rect2(40, 0, 20, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0gnfg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfbnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_304lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iobpg")
}],
"loop": false,
"name": &"collect",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3cgt6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tfbnh"]
resource_name = "idle"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.39215687)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_304lu"]
_data = {
&"RESET": SubResource("Animation_3cgt6"),
&"idle": SubResource("Animation_tfbnh")
}

[node name="ExtraLife" type="Area2D" unique_id=1156779745 groups=["collectibles"]]
collision_mask = 2
script = ExtResource("1_lmb83")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=182169559]
shape = SubResource("CircleShape2D_lmb83")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1540911098]
sprite_frames = SubResource("SpriteFrames_0gnfg")
animation = &"collect"
frame = 2
frame_progress = 1.0

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=371244308]
texture = ExtResource("1_p58kl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1960947754]
libraries/ = SubResource("AnimationLibrary_304lu")
autoplay = &"idle"

[node name="LifeSound" type="AudioStreamPlayer" parent="." unique_id=12070382]
stream = ExtResource("4_tfbnh")
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
